--- a/style.css
+++ b/style.css
@@ -22,22 +22,22 @@ body {
 main {
     display: flex;
     place-items: center;
-    height: 100vh;
+    height: 95vh;
 }
 
 .principal {
     background-color: var(--veryDarkBlueCardBG);
     max-width: 19.1rem;
-    margin: 3.75rem auto;
+    margin: auto;
     padding: 1rem;
     border-radius: 20px;
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center; */
 }
 
 .image {
-    width: 100%;
+    /* width: 100%; */
     border-radius: 15px;
     overflow: hidden;
     position: relative;
@@ -45,7 +45,7 @@ main {
 }
 
 .image img {
-    width: 100%;
+    /* width: 100%; */
     display: block;
 }
 
